--- a/styles/index.css
+++ b/styles/index.css
@@ -494,7 +494,7 @@ header {
 
 .show-sidebar {
   right: 0;
-  width: 50%;
+  width: 65%;
   transition: all 0.5s ease 0s;
   background-color: #2b2b2b;
   /* border: 1px solid #7bdd4c; */
